--- a/_posts/java/2017-01-02-JavaWeb开发基本概念.md
+++ b/_posts/java/2017-01-02-JavaWeb开发基本概念.md
@@ -13,10 +13,13 @@ tags : [Java]
 classpath是指WEB-INF文件夹下的classes目录,将web应用发布到服务器时，会将src目录下所有的类编译后的class文件和资源文件放入到WEB-INF文件夹下的classes目录.
 classpath设置的目地,在于告诉Java执行环境在哪些目录下可以找到Java程序执行所需要的类或者包.
 
-- classpath 和 classpath* 的区别  
-classpath：只会到你的class路径中查找找文件.
-classpath*：不仅到你的class路径,还会到class路径下的jar文件中进行查找.
-    1. 前者只会从第一个classpath中加载，而后者会从所有的classpath中加载.
-    2. 如果要加载的资源不在当前ClassLoader的路径里,那么用classpath:前缀是找不到的,这种情况下就需要使用classpath*:前缀.
-    3. 在多个classpath中存在同名资源都需要加载,如果用classpath:只会加载第一个,这种情况下也需要用classpath*:前缀.
-    4. 用classpath*:需要遍历所有的classpath路径,所以加载速度是很慢的,因此,在规划的时候,应该尽可能规划好资源文件所在的路径,尽量避免使用classpath*.
+- classpath 和 classpath* 的区别       
+classpath：用于加载类路径（包括jar包）中的一个且仅一个资源。对于多个匹配的也只返回一个，所以如果需要多个匹配的请考虑“classpath*:”前缀。
+classpath*：用于加载类路径（包括jar包）中的所有匹配的资源。
+    1. 前者只会从第一个classpath中加载，而后者会从所有的classpath中加载。
+    2. 如果要加载的资源不在当前ClassLoader的路径里,那么用classpath:前缀是找不到的,这种情况下就需要使用classpath*:前缀。
+    3. 在多个classpath中存在同名资源都需要加载,如果用classpath:只会加载第一个,这种情况下也需要用classpath*:前缀。
+    4. 用classpath*:需要遍历所有的classpath路径,所以加载速度是很慢的,因此,在规划的时候,应该尽可能规划好资源文件所在的路径,尽量避免使用classpath*。
+    
+    >参考: http://jinnianshilongnian.iteye.com/blog/1416322
+
