--- a/_posts/java/2017-09-07-Java8.md
+++ b/_posts/java/2017-09-07-Java8.md
@@ -9,15 +9,221 @@ tags : [Java]
 # Java8
 ---
 
-## Lambda 表达式 
-> https://www.cnblogs.com/figure9/archive/2014/10/24/4048421.html   
-> http://blog.csdn.net/ioriogami/article/details/12782141/   
+<!--break-->
 
+## 函数式接口
+> https://www.cnblogs.com/heimianshusheng/p/5672641.html 
+> http://lucida.me/blog/java-8-lambdas-insideout-language-features 
+
+函数式接口，简单的说就是指仅含有一个抽象方法的接口，以@Functionalnterface标注，注意，这里的抽象方法指的是该接口自己特有的抽象方法，而不包含它从其上级继承过来的抽象方法。
+
+Java SE 7 中已经存在的函数式接口：
+
+### Java8中常用的全新的接口 
+java.lang.Runnable
+java.util.concurrent.Callable
+java.security.PrivilegedAction
+java.util.Comparator
+java.io.FileFilter
+java.beans.PropertyChangeListener 
+
+除此之外，Java SE 8中增加了一个新的包：java.util.function，它里面包含了常用的函数式接口，例如： 
+Predicate<T>——接收 T 并返回 boolean
+Consumer<T>——接收 T，不返回值
+Function<T, R>——接收 T，返回 R
+Supplier<T>——提供 T 对象（例如工厂），不接收值
+UnaryOperator<T>——接收 T 对象，返回 T
+BinaryOperator<T>——接收两个 T，返回 T 
+
+#### Predicate接口 
+Predicate 接口只有一个参数，返回boolean类型。该接口包含多种默认方法来将Predicate组合成其他复杂的逻辑（比如：与，或，非）：
+
+代码如下：
+``` 
+Predicate<String> predicate = (s) -> s.length() > 0;
+ 
+predicate.test("foo");              // true
+predicate.negate().test("foo");     // false
+
+Predicate<Boolean> nonNull = Objects::nonNull;
+Predicate<Boolean> isNull = Objects::isNull;
+
+Predicate<String> isEmpty = String::isEmpty;
+Predicate<String> isNotEmpty = isEmpty.negate();
+```
+
+### Function 接口 
+Function 接口有一个参数并且返回一个结果，并附带了一些可以和其他函数组合的默认方法（compose, andThen）：
+
+代码如下:
+``` 
+Function<String, Integer> toInteger = Integer::valueOf;
+Function<String, String> backToString = toInteger.andThen(String::valueOf);
+backToString.apply("123");     // "123"
+```
+
+### Supplier 接口
+Supplier 接口返回一个任意范型的值，和Function接口不同的是该接口没有任何参数
+
+代码如下:
+``` 
+Supplier<Person> personSupplier = Person::new;
+personSupplier.get();   // new Person
+```
+
+### Consumer 接口 
+
+Comparator 是老Java中的经典接口， Java 8在此之上添加了多种默认方法：
+
+代码如下:
+``` 
+Consumer<Person> greeter = (p) -> System.out.println("Hello, " + p.firstName);
+greeter.accept(new Person("Luke", "Skywalker"));
+```
+
+### Comparator 接口
+
+Comparator 是老Java中的经典接口， Java 8在此之上添加了多种默认方法：
+
+代码如下:
+```  
+Comparator<Person> comparator = (p1, p2) -> p1.firstName.compareTo(p2.firstName);
+ 
+
+Person p1 = new Person("John", "Doe");
+Person p2 = new Person("Alice", "Wonderland");
+
+comparator.compare(p1, p2);             // > 0
+comparator.reversed().compare(p1, p2);  // < 0
+```
+
+### Optional 接口 
+
+Optional 不是函数是接口，这是个用来防止NullPointerException异常的辅助类型，这是下一届中将要用到的重要概念，现在先简单的看看这个接口能干什么：
+
+Optional 被定义为一个简单的容器，其值可能是null或者不是null。在Java 8之前一般某个函数应该返回非空对象但是偶尔却可能返回了null，而在Java 8中，不推荐你返回null而是返回Optional。
+
+### Stream 接口 
+
+java.util.Stream 表示能应用在一组元素上一次执行的操作序列。Stream 操作分为中间操作或者最终操作两种，最终操作返回一特定类型的计算结果，而中间操作返回Stream本身，这样你就可以将多个操作依次串起来。Stream 的创建需要指定一个数据源，比如 java.util.Collection的子类，List或者Set， Map不支持。Stream的操作可以串行执行或者并行执行。
+
+首先看看Stream是怎么用，首先创建实例代码的用到的数据List：
+
+代码如下:
+```  
+List<String> stringCollection = new ArrayList<>();
+stringCollection.add("ddd2");
+stringCollection.add("aaa2");
+stringCollection.add("bbb1");
+stringCollection.add("aaa1");
+stringCollection.add("bbb3");
+stringCollection.add("ccc");
+stringCollection.add("bbb2");
+stringCollection.add("ddd1");
+```
+
+### Filter 过滤 
+过滤通过一个predicate接口来过滤并只保留符合条件的元素，该操作属于中间操作，所以我们可以在过滤后的结果来应用其他Stream操作（比如forEach）。forEach需要一个函数来对过滤后的元素依次执行。forEach是一个最终操作，所以我们不能在forEach之后来执行其他Stream操作。
+
+代码如下:
+```  
+stringCollection
+    .stream()
+    .filter((s) -> s.startsWith("a"))
+    .forEach(System.out::println);
+// "aaa2", "aaa1"
+```
+
+### Sort 排序
+排序是一个中间操作，返回的是排序好后的Stream。如果你不指定一个自定义的Comparator则会使用默认排序。
+
+代码如下:
+``` 
+stringCollection
+    .stream()
+    .sorted()
+    .filter((s) -> s.startsWith("a"))
+    .forEach(System.out::println);
+ 
+
+// "aaa1", "aaa2"
+```
+需要注意的是，排序只创建了一个排列好后的Stream，而不会影响原有的数据源，排序之后原数据stringCollection是不会被修改的：
+
+代码如下:
+```  
+System.out.println(stringCollection);
+// ddd2, aaa2, bbb1, aaa1, bbb3, ccc, bbb2, ddd1
+```
+其实这也是函数式编程的一个好处：不会改变对象状态，每次都会创建一个新对象。
+
+### Map 映射
+中间操作map会将元素根据指定的Function接口来依次将元素转成另外的对象，你也可以通过map来将对象转换成其他类型，map返回的Stream类型是根据map传递进去的函数的返回值决定的。下面的示例展示了将字符串转换为大写字符串：
+
+代码如下:
+```  
+stringCollection
+    .stream()
+    .map(String::toUpperCase)
+    .sorted((a, b) -> b.compareTo(a))
+    .forEach(System.out::println);
+ 
+
+// "DDD2", "DDD1", "CCC", "BBB3", "BBB2", "AAA2", "AAA1"
+```
+
+### Match 匹配 
+Stream提供了多种匹配操作，允许检测指定的Predicate是否匹配整个Stream。所有的匹配操作都是最终操作，并返回一个boolean类型的值。
+
+代码如下:
+``` 
+boolean anyStartsWithA = 
+    stringCollection
+        .stream()
+        .anyMatch((s) -> s.startsWith("a"));
+ 
+
+System.out.println(anyStartsWithA);      // true
+
+boolean allStartsWithA = 
+    stringCollection
+        .stream()
+        .allMatch((s) -> s.startsWith("a"));
+
+System.out.println(allStartsWithA);      // false
+
+boolean noneStartsWithZ = 
+    stringCollection
+        .stream()
+        .noneMatch((s) -> s.startsWith("z"));
+
+System.out.println(noneStartsWithZ);      // true
+```
+
+### Count 计数 
+计数是一个最终操作，返回Stream中元素的个数，返回值类型是long。
+
+代码如下:
+```  
+long startsWithB = 
+    stringCollection
+        .stream()
+        .filter((s) -> s.startsWith("b"))
+        .count();
+ 
+
+System.out.println(startsWithB);    // 3
+```
+
+...
+
+
+## Lambda 表达式 
 ``` 
 基本语法:
 (parameters) -> expression
 或
-(parameters) ->{ statements; } 
+(parameters) -> { statements; } 
 ``` 
 
 可见λ表达式有三部分组成：参数列表，箭头（->），以及一个表达式或语句块。
