--- a/_posts/java/2017-01-04-Java动态代理.md
+++ b/_posts/java/2017-01-04-Java动态代理.md
@@ -77,10 +77,7 @@ public class Main {
 > 参考：
 >
 > [Java 动态代理机制分析及扩展](https://www.ibm.com/developerworks/cn/java/j-lo-proxy1/index.html)
-
-
-## 动态代理的运用
-HibernateProxy
-EntityManager
+> 
+> [动态代理详解](https://www.cnblogs.com/fengmingyue/p/6092151.html)
 
 
