--- a/_posts/java/2017-01-04-Java动态代理.md
+++ b/_posts/java/2017-01-04-Java动态代理.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Java 动态代理
-category : [JavaEE]
+category : [Java]
 tagline: "Supporting tagline"
 tags : [Java, 动态代理]
 ---
