--- a/_posts/java/2017-08-16-Java日期对象转换.md
+++ b/_posts/java/2017-08-16-Java日期对象转换.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: Java 日期时间转换
-category : [JavaEE]
+category : [Java]
 tagline: "Supporting tagline"
-tags : [Java]
+tags : [Java, Date]
 ---
 {% include JB/setup %}
 # Java 日期时间转换
