--- a/_posts/java/2017-09-07-Java8.md
+++ b/_posts/java/2017-09-07-Java8.md
@@ -3,7 +3,7 @@ layout: post
 title: Java8
 category : [Java]
 tagline: "Supporting tagline"
-tags : [Java]
+tags : [Java, java8]
 ---
 {% include JB/setup %}
 # Java8
