--- a/_posts/2017-03-05-RabbitMQ的学习和使用.md
+++ b/_posts/2017-03-05-RabbitMQ的学习和使用.md
@@ -10,24 +10,79 @@ tags : [RabbitMQ]
 ---
 
 > [RabbitMQ 官网](https://www.rabbitmq.com/)
-
-<!--break-->
-
-[RabbitMQ 消息队列（一）: Detailed Introduction 详细介绍](http://blog.csdn.net/anzhsoft/article/details/19563091?utm_source=tuicool&utm_medium=referral)
-
-
-> more details : http://docs.spring.io/spring-amqp/reference/html/_introduction.html#quick-tour
-
-http://www.iteye.com/topic/128636
-
-http://www.myexception.cn/database/1350084.html
+> 
+> [RabbitMQ 消息队列（一）: Detailed Introduction 详细介绍](http://blog.csdn.net/anzhsoft/article/details/19563091?utm_source=tuicool&utm_medium=referral)
+> 
+> http://docs.spring.io/spring-amqp/reference/html/_introduction.html#quick-tour
+> 
+> http://www.iteye.com/topic/128636
+> 
+> http://www.myexception.cn/database/1350084.html
 
 
+<!--break--> 
 
-# Spring AMQP
+## RabbitMQ server 安装 
+> [Downloading and Installing RabbitMQ](https://www.rabbitmq.com/download.html) 
+> 
+> [RabbitMQ在Ubuntu 16.04下的安装与配置](http://blog.csdn.net/rickey17/article/details/72756766) 
+> 
+> http://blog.csdn.net/qq_20545159/article/details/53857351 
+> 
+> https://my.oschina.net/hncscwc/blog/262246?fromerr=hs1eUWw0
+> 
+> http://blog.csdn.net/ztx114/article/details/78410727
 
+
+
+``` 
+# 添加源
+echo 'deb http://www.rabbitmq.com/debian/ testing main' | sudo tee /etc/apt/sources.list.d/rabbitmq.list
+  
+# 新增公钥（不加会有警告）
+wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
+  
+# 更新源
+sudo apt-get update
+  
+# 安装 rabbitmq-server 
+sudo apt-get install rabbitmq-server
+``` 
+
+启动 rabbitmq-server： 
+``` 
+invoke-rc.d rabbitmq-server start   
+```
+`rabbitmq-server start` 启动的话，关闭窗口，服务会停止。
+
+重启 rabbitmq-server： 
+``` 
+invoke-rc.d rabbitmq-server restart 
+```
+
+关闭 rabbitmq-server： 
+``` 
+invoke-rc.d rabbitmq-server stop 
+```
+
+查看用户 
+``` 
+sudo rabbitmqctl list_users 
+``` 
+
+新增管理员用户
+``` 
+sudo rabbitmqctl add_user admin admin  
+sudo rabbitmqctl set_user_tags admin administrator 
+``` 
+
+打开 `http://127.0.0.1:15672` 登录管理后台，默认账号是 `guest` ，默认密码是 `guest`。
+
+
+
+# RabbitMQ 与 Spring Boot 的集成 
 > [Understanding AMQP](https://spring.io/understanding/AMQP)
-
+> 
 > [Spring AMQP](http://docs.spring.io/spring-amqp/reference/html/index.html)
 
 
