--- a/_posts/java/2017-01-04-Java动态代理.md
+++ b/_posts/java/2017-01-04-Java动态代理.md
@@ -80,4 +80,43 @@ public class Main {
 > 
 > [动态代理详解](https://www.cnblogs.com/fengmingyue/p/6092151.html)
 
+``` 
+Class[] cs = {MyInterface.class};
+MyInterface mi = (MyInterface)Proxy.newProxyInstance(loader, cs, h);
+``` 
 
+上面代码中，Proxy类的静态方法newProxyInstance()方法生成了一个对象，这个对象实现了cs数组中指定的接口。没错，返回值mi是MyInterface接口的实现类。你不要问这个类是哪个类，你只需要知道mi是MyInterface接口的实现类就可以了。你现在也不用去管loader和h这两个参数是什么，你只需要知道，Proxy类的静态方法newProxyInstance()方法返回的方法是实现了指定接口的实现类对象，甚至你都没有看见实现类的代码。
+动态代理就是在运行时生成一个类，这个类会实现你指定的一组接口，而这个类没有.java文件，是在运行时生成的，你也不用去关心它是什么类型的，你只需要知道它实现了哪些接口即可。
+
+### Proxy类的newProxyInstance()方法 
+Proxy类的newInstance()方法有三个参数：
+- ClassLoader loader： 它是类加载器类型，你不用去理睬它，你只需要知道怎么可以获得它就可以了：MyInterface.class.getClassLoader()就可以获取到ClassLoader对象，没错，只要你有一个Class对象就可以获取到ClassLoader对象；
+- Class[] interfaces： 指定newProxyInstance()方法返回的对象要实现哪些接口，没错，可以指定多个接口，例如上面例子我们只指定了一个接口：Class[] cs = {MyInterface.class};
+- InvocationHandler h： 它是最重要的一个参数！它是一个接口！它的名字叫调用处理器！你想一想，上面例子中mi对象是MyInterface接口的实现类对象，那么它一定是可以调用fun1()和fun2()方法了，难道你不想调用一下fun1()和fun2()方法么，它会执行些什么东东呢？其实无论你调用代理对象的什么方法，它都是在调用InvocationHandler的invoke()方法！
+
+![](/images/2017-01-04-InvocationHandler-invoke.png) 
+
+``` 
+public static void main(String[] args) {
+　　Class[] cs = {MyInterface.class};
+　　ClassLoader loader = MyInterface.class.getClassLoader();
+　　InvocationHandler h = new InvocationHandler() {
+　　　　public Object invoke(Object proxy, Method method, Object[] args)throws Throwable {
+　　　　　　System.out.println("无论你调用代理对象的什么方法，其实都是在调用invoke()...");
+　　　　　　return null;
+　　　　}
+　　};
+　　MyInterface mi = (MyInterface)Proxy.newProxyInstance(loader, cs, h);
+　　mi.fun1();
+　　mi.fun2();
+}
+``` 
+
+InvocationHandler接口只有一个方法，即invoke()方法！它是对代理对象所有方法的唯一实现。也就是说，无论你调用代理对象上的哪个方法，其实都是在调用InvocationHandler的invoke()方法。 
+
+### InvocationHandler的invoke()方法 
+InvocationHandler的invoke()方法的参数有三个：
+- Object proxy： 代理对象，也就是Proxy.newProxyInstance()方法返回的对象，通常我们用不上它；
+- Method method： 表示当前被调用方法的反射对象，例如mi.fun1()，那么method就是fun1()方法的反射对象；
+- Object[] args： 表示当前被调用方法的参数，当然mi.fun1()这个调用是没有参数的，所以args是一个零长数组。
+最后要说的是invoke()方法的返回值为Object类型，它表示当前被调用的方法的返回值，当然mi.fun1()方法是没有返回值的，所以invoke()返回的就必须是null了。
