--- a/_posts/java/2017-01-02-Java.md
+++ b/_posts/java/2017-01-02-Java.md
@@ -231,7 +231,8 @@ x = x + 1;     //语句4
 
 ## Java 类加载机制 
 
-  
+> [Java虚拟机类加载机制](http://blog.csdn.net/wangtaomtk/article/details/52262499) 
+
    
    
    
