--- a/_posts/2017-03-05-RabbitMQ的学习和使用.md
+++ b/_posts/2017-03-05-RabbitMQ的学习和使用.md
@@ -13,14 +13,11 @@ tags : [RabbitMQ]
 > 
 > [RabbitMQ 消息队列（一）: Detailed Introduction 详细介绍](http://blog.csdn.net/anzhsoft/article/details/19563091?utm_source=tuicool&utm_medium=referral)
 > 
-> http://docs.spring.io/spring-amqp/reference/html/_introduction.html#quick-tour
-> 
-> http://www.iteye.com/topic/128636
-> 
-> http://www.myexception.cn/database/1350084.html
+> [Spring AMQP Introduction](http://docs.spring.io/spring-amqp/reference/html/_introduction.html#quick-tour) 
 
 
 <!--break--> 
+
 
 ## RabbitMQ server 安装 
 > [Downloading and Installing RabbitMQ](https://www.rabbitmq.com/download.html) 
