--- a/_posts/2016-11-28-Git使用问题记录.md
+++ b/_posts/2016-11-28-Git使用问题记录.md
@@ -22,7 +22,7 @@ tags : [Git]
 
 大体意思是说当前分支已经同本地 master 分支代码合并过了，并且本地 master 分支代码已经是最新的了。  
 
-这时可以使用 `git reset --hard` 命令将本地防止代码回滚到以前某一个正确的版本，再配合 `git push --force` 命令将本地分支的修改同步到服务器上，不然服务器上的分支又会和回滚后的分支冲突：  
+这时可以使用 `git reset --hard` 命令将本地防止代码回滚到以前某一个正确的版本，再配合 `git push --force` 命令将本地分支的修改强制同步到服务器上，不然服务器上的分支又会和回滚后的分支冲突：  
 
 ```
 git reset --hard <version>
