--- a/_posts/2017-10-08-Cropper图片裁剪上传.md
+++ b/_posts/2017-10-08-Cropper图片裁剪上传.md
@@ -25,13 +25,42 @@ tags : [Cropper]
   </div>
 </div>
 ```
+
 <!--break-->
 
-js: 
+js:   
+```  
+// 从本地选择裁剪图片
+var $inputImage = $('#inputImage');
+if (window.FileReader) {
+    $inputImage.change(function () {
+        var fileReader = new FileReader(),
+            files = this.files,
+            file;
 
-```
-//初始化裁剪插件
-var $image = $('.image-crop > img');
+        if (!files.length) {
+            return;
+        }
+
+        file = files[0];
+
+        if (/^image\/\w+$/.test(file.type)) {
+            fileReader.readAsDataURL(file);
+            fileReader.onload = function () {
+                $inputImage.val('');
+                $image.cropper('reset', true).cropper('replace', this.result);
+            };
+            $('#cropperModal').modal('show');
+        } else {
+            showMessage('请选择图片.');
+        }
+    });
+} else {
+    $inputImage.addClass('hide');
+}
+       
+// 初始化裁剪插件
+var $image = $('.image-crop > img');  
 $($image).cropper({
 	viewMode: 1,
     aspectRatio: 1,
@@ -40,46 +69,45 @@ $($image).cropper({
     // Output the result data for cropping image.
     }
 }); 
-    
-//裁剪图片并上传
-        $('#uploadLogo').on('click', function () {
-            var dataUrl = $('.image-crop > img');
-            var beginIndex = dataUrl.attr('src').indexOf('/') + 1;
-            var endIndex = dataUrl.attr('src').indexOf(';');
-            var ext = dataUrl.attr('src').substring(beginIndex, endIndex);
-            if (endIndex < beginIndex) {
-                ext = dataUrl.attr('src').substring(dataUrl.attr('src').lastIndexOf(".") + 1)
+              
+// 裁剪图片并上传
+$('#uploadLogo').on('click', function () {
+    var dataUrl = $('.image-crop > img');
+    // var beginIndex = dataUrl.attr('src').indexOf('/') + 1;
+    // var endIndex = dataUrl.attr('src').indexOf(';');
+    // var ext = dataUrl.attr('src').substring(beginIndex, endIndex);
+    // if (endIndex < beginIndex) {
+    //     ext = dataUrl.attr('src').substring(dataUrl.attr('src').lastIndexOf(".") + 1)
+    // }
+
+    var cropper = dataUrl.cropper('getCroppedCanvas');
+    // var imgUrl = dataUrl.toDataURL();
+    // var img = document.createElement("inputImage");
+    // img.src = imgUrl;
+    // document.getElementById("logoImg").appendChild(img);
+
+    //可以直接保存 DataURL,这里保存了base64文件的文件名
+    cropper.toBlob(function (blob) {
+        var formData = new FormData();
+        formData.append('file', blob);
+        $.ajax('/imgCut', {
+            method: "POST",
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (res) {
+                $('#url').val(res);
+                toastr.success("图片上传成功");
+            },
+            error: function () {
+                toastr.success("图片上传失败");
             }
-
-            var cropper = dataUrl.cropper('getCroppedCanvas');
-            //var imgUrl = dataUrl.toDataURL();
-            // var img = document.createElement("inputImage");
-            // img.src = imgUrl;
-            // document.getElementById("logoImg").appendChild(img);
-
-			//可以直接保存 DataURL,这里保存了base64文件的文件名
-            cropper.toBlob(function (blob) {
-                var formData = new FormData();
-                formData.append('file', blob);
-                $.ajax('/imgCut', {
-                    method: "POST",
-                    data: formData,
-                    processData: false,
-                    contentType: false,
-                    success: function (res) {
-                        $('#url').val(res);
-                        toastr.success("图片上传成功");
-                    },
-                    error: function () {
-                        toastr.success("图片上传失败");
-                    }
-                });
-            });
-        }); 
+        });
+    });
+}); 
 ```
 
-Java: 
-
+Java 后台代码:   
 ``` 
 /**
 * 上传裁剪的图片
@@ -119,8 +147,6 @@ public void blobToImage(@PathVariable("fileName") String fileName, HttpServletRe
     }
 }
 ```
-
-
 
 开始裁剪上传时把图片上传时的文件格式页传到后台了，后台根据图片格式设置输出文件的 MIME ( `response.setHeader("Content-Type", "image/" + ext);` )，但是 IE 浏览器显示非 png 格式的图片时,控制台会报错: 
 
