--- a/_posts/java/2017-01-04-Java动态代理.md
+++ b/_posts/java/2017-01-04-Java动态代理.md
@@ -69,7 +69,9 @@ public class Main {
     q.request();
   }
 }
-```
+``` 
+
+上面所说的静态代理模式，在实际开发中其实应用不大，因为他需要事先知道被代理对象是谁，而且被代理对象和代理对象实现了公共的接口。实际情况往往并不能满足这些条件，我们往往在写代理模式的时候并不知道到时候被代理的对象是谁。解决办法就是——动态代理。
 
 
 ## JDK 动态代理
