--- a/_posts/java/2017-01-02-Java.md
+++ b/_posts/java/2017-01-02-Java.md
@@ -17,18 +17,13 @@ tags : [Java]
 >
 > [Java Tutorial](https://www.sitesbay.com/java/index)  
 
-
-
 <!--break-->
-
-
 
 ## Run-Time Data Areas  
  
 > [Run-Time Data Areas](https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-2.html#jvms-2.5) 
 > [Java中的堆和栈的区别](http://droidyue.com/blog/2014/12/07/differences-between-stack-and-heap-in-java/) 
 > [JVM-String常量池与运行时常量池](http://blog.csdn.net/sugar_rainbow/article/details/68150249) 
-
 
 Java 运行时数据区图：　
 ![Java 运行时数据区图](/images/2017-01-02-run-time-data-areas.png)  
@@ -233,7 +228,7 @@ x = x + 1;     //语句4
 
 > [Java虚拟机类加载机制](http://blog.csdn.net/wangtaomtk/article/details/52262499) 
 
-   
+> [JAVA父类对象与子类对象-造型转换-class castException异常](http://blog.sina.com.cn/s/blog_9560a1300101b7b1.html)  
    
    
 ## 对象和对象的引用 
