--- a/_posts/java/2017-09-07-Java8.md
+++ b/_posts/java/2017-09-07-Java8.md
@@ -14,29 +14,35 @@ tags : [Java, java8]
 ## 函数式接口
 > https://www.cnblogs.com/heimianshusheng/p/5672641.html 
 > http://lucida.me/blog/java-8-lambdas-insideout-language-features 
+> https://www.cnblogs.com/jianwei-dai/p/5819479.html 
 
-函数式接口，简单的说就是指仅含有一个抽象方法的接口，以@Functionalnterface标注，注意，这里的抽象方法指的是该接口自己特有的抽象方法，而不包含它从其上级继承过来的抽象方法。
+函数式接口，简单的说就是指仅含有一个抽象方法的接口，以 `@Functionalnterface` 标注，注意，这里的抽象方法指的是该接口自己特有的抽象方法，而不包含它从其上级继承过来的抽象方法。
+如 `java.lang.Comparable`，之前被称为 SAM 类型，即单抽象方法(Single Abstract Method)。我们并不需要声明一个接口是函数式接口，编译器会根据接口的结构自行判断，
+但是也可以用 `@FunctionalInterface` 来显式指定一个接口是函数式接口，加上这个注解之后，编译器就会验证该接口是否满足函数式接口的要求
 
-Java SE 7 中已经存在的函数式接口：
+> Java8 的接口还可以定义一个 default 的方法，default 方法使用 `default` 关键字修饰，它是对象方法，需要使用对象来进行访问。
 
-### Java8中常用的全新的接口 
-java.lang.Runnable
-java.util.concurrent.Callable
-java.security.PrivilegedAction
-java.util.Comparator
-java.io.FileFilter
-java.beans.PropertyChangeListener 
+### Java8 中常用的全新的接口 
+Java7 中已经存在的函数式接口： 
+- java.lang.Runnable 
+- java.util.concurrent.Callable 
+- java.security.PrivilegedAction
+- java.util.Comparator
+- java.io.FileFilter
+- java.beans.PropertyChangeListener 
 
-除此之外，Java SE 8中增加了一个新的包：java.util.function，它里面包含了常用的函数式接口，例如： 
-Predicate<T>——接收 T 并返回 boolean
-Consumer<T>——接收 T，不返回值
-Function<T, R>——接收 T，返回 R
-Supplier<T>——提供 T 对象（例如工厂），不接收值
-UnaryOperator<T>——接收 T 对象，返回 T
-BinaryOperator<T>——接收两个 T，返回 T 
+除此之外，Java8 中增加了一个新的包：`java.util.function`，它里面包含了常用的函数式接口，例如： 
+- Predicate<T>：接收 T 并返回 boolean
+- Consumer<T>：接收 T，不返回值
+- Function<T, R>：接收 T，返回 R
+- Supplier<T>：提供 T 对象（例如工厂），不接收值
+- UnaryOperator<T>：接收 T 对象，返回 T
+- BinaryOperator<T>：接收两个 T，返回 T  
 
-#### Predicate接口 
-Predicate 接口只有一个参数，返回boolean类型。该接口包含多种默认方法来将Predicate组合成其他复杂的逻辑（比如：与，或，非）：
+> Java 中的 lambda 无法单独出现，它需要一个函数式接口来盛放，lambda 表达式方法体其实就是函数接口的实现。
+
+#### Predicate 接口 
+Predicate 接口只有一个参数，返回 boolean 类型。该接口包含多种默认方法来将 Predicate 组合成其他复杂的逻辑（比如：与，或，非）：
 
 代码如下：
 ``` 
@@ -52,7 +58,32 @@ Predicate<String> isEmpty = String::isEmpty;
 Predicate<String> isNotEmpty = isEmpty.negate();
 ```
 
-### Function 接口 
+#### Consumer 接口 
+在 `java.lang.Iterable` 接口中有一个默认的方法实现:
+``` 
+default void forEach(Consumer<? super T> action) {
+    Objects.requireNonNull(action);
+    for (T t : this) {
+        action.accept(t);
+    }
+}
+```
+``` 
+List<User> users = userRepository.findAll();
+users.stream.forEach(user -> {
+    System.out.println(user.username);
+});
+``` 
+
+在 Java8 `java.util.Optional` 类中的 ifPresent 方法实现：
+``` 
+public void ifPresent(Consumer<? super T> consumer) {
+    if (value != null)
+        consumer.accept(value);
+}
+``` 
+
+#### Function 接口 
 Function 接口有一个参数并且返回一个结果，并附带了一些可以和其他函数组合的默认方法（compose, andThen）：
 
 代码如下:
@@ -62,8 +93,8 @@ Function<String, String> backToString = toInteger.andThen(String::valueOf);
 backToString.apply("123");     // "123"
 ```
 
-### Supplier 接口
-Supplier 接口返回一个任意范型的值，和Function接口不同的是该接口没有任何参数
+#### Supplier 接口
+Supplier 接口返回一个任意范型的值，和 Function 接口不同的是该接口没有任何参数
 
 代码如下:
 ``` 
@@ -71,151 +102,19 @@ Supplier<Person> personSupplier = Person::new;
 personSupplier.get();   // new Person
 ```
 
-### Consumer 接口 
-
-Comparator 是老Java中的经典接口， Java 8在此之上添加了多种默认方法：
-
-代码如下:
-``` 
-Consumer<Person> greeter = (p) -> System.out.println("Hello, " + p.firstName);
-greeter.accept(new Person("Luke", "Skywalker"));
-```
-
-### Comparator 接口
-
-Comparator 是老Java中的经典接口， Java 8在此之上添加了多种默认方法：
+#### Comparator 接口
+Comparator 是老 Java 中的经典接口， Java8 在此之上添加了多种默认方法：
 
 代码如下:
 ```  
 Comparator<Person> comparator = (p1, p2) -> p1.firstName.compareTo(p2.firstName);
  
-
 Person p1 = new Person("John", "Doe");
 Person p2 = new Person("Alice", "Wonderland");
 
 comparator.compare(p1, p2);             // > 0
 comparator.reversed().compare(p1, p2);  // < 0
 ```
-
-### Optional 接口 
-
-Optional 不是函数是接口，这是个用来防止NullPointerException异常的辅助类型，这是下一届中将要用到的重要概念，现在先简单的看看这个接口能干什么：
-
-Optional 被定义为一个简单的容器，其值可能是null或者不是null。在Java 8之前一般某个函数应该返回非空对象但是偶尔却可能返回了null，而在Java 8中，不推荐你返回null而是返回Optional。
-
-### Stream 接口 
-
-java.util.Stream 表示能应用在一组元素上一次执行的操作序列。Stream 操作分为中间操作或者最终操作两种，最终操作返回一特定类型的计算结果，而中间操作返回Stream本身，这样你就可以将多个操作依次串起来。Stream 的创建需要指定一个数据源，比如 java.util.Collection的子类，List或者Set， Map不支持。Stream的操作可以串行执行或者并行执行。
-
-首先看看Stream是怎么用，首先创建实例代码的用到的数据List：
-
-代码如下:
-```  
-List<String> stringCollection = new ArrayList<>();
-stringCollection.add("ddd2");
-stringCollection.add("aaa2");
-stringCollection.add("bbb1");
-stringCollection.add("aaa1");
-stringCollection.add("bbb3");
-stringCollection.add("ccc");
-stringCollection.add("bbb2");
-stringCollection.add("ddd1");
-```
-
-### Filter 过滤 
-过滤通过一个predicate接口来过滤并只保留符合条件的元素，该操作属于中间操作，所以我们可以在过滤后的结果来应用其他Stream操作（比如forEach）。forEach需要一个函数来对过滤后的元素依次执行。forEach是一个最终操作，所以我们不能在forEach之后来执行其他Stream操作。
-
-代码如下:
-```  
-stringCollection
-    .stream()
-    .filter((s) -> s.startsWith("a"))
-    .forEach(System.out::println);
-// "aaa2", "aaa1"
-```
-
-### Sort 排序
-排序是一个中间操作，返回的是排序好后的Stream。如果你不指定一个自定义的Comparator则会使用默认排序。
-
-代码如下:
-``` 
-stringCollection
-    .stream()
-    .sorted()
-    .filter((s) -> s.startsWith("a"))
-    .forEach(System.out::println);
- 
-
-// "aaa1", "aaa2"
-```
-需要注意的是，排序只创建了一个排列好后的Stream，而不会影响原有的数据源，排序之后原数据stringCollection是不会被修改的：
-
-代码如下:
-```  
-System.out.println(stringCollection);
-// ddd2, aaa2, bbb1, aaa1, bbb3, ccc, bbb2, ddd1
-```
-其实这也是函数式编程的一个好处：不会改变对象状态，每次都会创建一个新对象。
-
-### Map 映射
-中间操作map会将元素根据指定的Function接口来依次将元素转成另外的对象，你也可以通过map来将对象转换成其他类型，map返回的Stream类型是根据map传递进去的函数的返回值决定的。下面的示例展示了将字符串转换为大写字符串：
-
-代码如下:
-```  
-stringCollection
-    .stream()
-    .map(String::toUpperCase)
-    .sorted((a, b) -> b.compareTo(a))
-    .forEach(System.out::println);
- 
-
-// "DDD2", "DDD1", "CCC", "BBB3", "BBB2", "AAA2", "AAA1"
-```
-
-### Match 匹配 
-Stream提供了多种匹配操作，允许检测指定的Predicate是否匹配整个Stream。所有的匹配操作都是最终操作，并返回一个boolean类型的值。
-
-代码如下:
-``` 
-boolean anyStartsWithA = 
-    stringCollection
-        .stream()
-        .anyMatch((s) -> s.startsWith("a"));
- 
-
-System.out.println(anyStartsWithA);      // true
-
-boolean allStartsWithA = 
-    stringCollection
-        .stream()
-        .allMatch((s) -> s.startsWith("a"));
-
-System.out.println(allStartsWithA);      // false
-
-boolean noneStartsWithZ = 
-    stringCollection
-        .stream()
-        .noneMatch((s) -> s.startsWith("z"));
-
-System.out.println(noneStartsWithZ);      // true
-```
-
-### Count 计数 
-计数是一个最终操作，返回Stream中元素的个数，返回值类型是long。
-
-代码如下:
-```  
-long startsWithB = 
-    stringCollection
-        .stream()
-        .filter((s) -> s.startsWith("b"))
-        .count();
- 
-
-System.out.println(startsWithB);    // 3
-```
-
-...
 
 
 ## Lambda 表达式 
@@ -258,7 +157,7 @@ PrivilegedAction<String> a = () -> "done";
 - lambda 表达式的返回值和 T 的方法返回值相兼容（Compatible）
 - lambda 表达式内所抛出的异常和 T 的方法 throws 类型相兼容   
 
-由于目标类型（函数式接口）已经 “知道”lambda 表达式的形式参数（Formal parameter）类型，所以我们没有必要把已知类型再重复一遍。也就是说，lambda 表达式的参数类型可以从目标类型中得出：
+由于目标类型（函数式接口）已经 “知道” lambda 表达式的形式参数（Formal parameter）类型，所以我们没有必要把已知类型再重复一遍。也就是说，lambda 表达式的参数类型可以从目标类型中得出：
 ``` 
 Comparator<String> c = (s1, s2) -> s1.compareToIgnoreCase(s2); 
 ```
@@ -320,10 +219,10 @@ Thread gaoDuanDaQiShangDangCi = new Thread(() -> {
 List<Person> ps = ...
 Stream<String> names = ps.stream().map(p -> p.getName());
 ```
-在上面的代码中，ps的类型是List<Person>，所以ps.stream()的返回类型是Stream<Person>。map()方法接收一个类型为Function<T, R>的函数式接口，这里T的类型即是Stream元素的类型，也就是Person，而R的类型未知。由于在重载解析之后 lambda 表达式的目标类型仍然未知，我们就需要推导R的类型：通过对 lambda 表达式函数体进行类型检查，我们发现函数体返回String，因此R的类型是String，因而map()返回Stream<String>。绝大多数情况下编译器都能解析出正确的类型，但如果碰到无法解析的情况，我们则需要：
-- 使用显式 lambda 表达式（为参数p提供显式类型）以提供额外的类型信息
-- 把 lambda 表达式转型为Function<Person, String>
-- 为泛型参数R提供一个实际类型。（.<String>map(p -> p.getName())）  
+在上面的代码中，ps 的类型是 List<Person>，所以 ps.stream() 的返回类型是 Stream<Person>。map() 方法接收一个类型为 Function<T, R> 的函数式接口，这里 T 的类型即是 Stream 元素的类型，也就是 Person，而 R 的类型未知。由于在重载解析之后 lambda 表达式的目标类型仍然未知，我们就需要推导R的类型：通过对 lambda 表达式函数体进行类型检查，我们发现函数体返回 String，因此R的类型是 String，因而 map() 返回 Stream<String>。绝大多数情况下编译器都能解析出正确的类型，但如果碰到无法解析的情况，我们则需要：
+- 使用显式 lambda 表达式（为参数 p 提供显式类型）以提供额外的类型信息
+- 把 lambda 表达式转型为 Function<Person, String>
+- 为泛型参数 R 提供一个实际类型。（.<String> map(p -> p.getName())）  
 
 lambda 表达式本身也可以为它自己的函数体提供目标类型，也就是说 lambda 表达式可以通过外部目标类型推导出其内部的返回类型，这意味着我们可以方便的编写一个返回函数的函数： 
 ``` 
@@ -342,6 +241,8 @@ Object o = (Runnable) () -> { System.out.println("hi"); };
 
 
 ### Method Reference(方法引用) 
+> 其实是 lambda 表达式的一种简化写法。所引用的方法其实是 lambda 表达式的方法体实现，语法也很简单，左边是容器（可以是类名，实例名），中间是 `::`，右边是相应的方法名。
+
 方法引用语法如下： 
 ``` 
 静态方法引用：ClassName :: methodName  
@@ -368,7 +269,7 @@ Object o = (Runnable) () -> { System.out.println("hi"); };
 > http://www.importnew.com/20331.html    
 > http://docs.oracle.com/javase/tutorial/java/javaOO/lambdaexpressions.html    
   
-Java 里面对 Stream 的定义：
+Java8 里面对 Stream 的定义：
 
 A sequence of elements supporting sequential and parallel aggregate operations.
 
@@ -423,11 +324,136 @@ public interface Collection<E> extends Iterable<E> {
 }
 ``` 
 
-## 转换 Stream   
+### 转换 Stream   
 转换 Stream 其实就是把一个 Stream 通过某些行为转换成一个新的 Stream。Stream 接口中定义了几个常用的转换方法: 
 
 示例: 
 ``` 
 # 抽取对象中所有的 id 的集合 
 List<Long> userIds = users.stream().map(user::getId).collect(Collectors.toList());
+``` 
+
+### Stream 的使用
+
+#### Optional 类
+Optional 不是函数接口，这是个用来防止 NullPointerException 异常的辅助类型，这是下一届中将要用到的重要概念，现在先简单的看看这个接口能干什么：
+
+Optional 被定义为一个简单的容器，其值可能是 null 或者不是 null 。在 Java8 之前一般某个函数应该返回非空对象但是偶尔却可能返回了 null，而在 Java8 中，
+不推荐你返回 null 而是返回 Optional。
+
+#### Stream 接口 
+
+`java.util.stream.Stream` 表示能应用在一组元素上一次执行的操作序列。Stream 操作分为中间操作或者最终操作两种，最终操作返回一特定类型的计算结果，
+而中间操作返回 Stream 本身，这样你就可以将多个操作依次串起来。Stream 的创建需要指定一个数据源，比如 `java.util.Collection` 的子类，List 或者 Set， Map 不支持。Stream 的操作可以串行执行或者并行执行。
+
+首先看看 Stream 是怎么用，首先创建实例代码的用到的数据 List：
+
+代码如下:
+```  
+List<String> stringCollection = new ArrayList<>();
+stringCollection.add("ddd2");
+stringCollection.add("aaa2");
+stringCollection.add("bbb1");
+stringCollection.add("aaa1");
+stringCollection.add("bbb3");
+stringCollection.add("ccc");
+stringCollection.add("bbb2");
+stringCollection.add("ddd1");
 ```
+
+#### Filter 过滤 
+过滤通过一个 Predicate 接口来过滤并只保留符合条件的元素，该操作属于中间操作，所以我们可以在过滤后的结果来应用其他 Stream 操作（比如 forEach）。
+forEach 需要一个函数来对过滤后的元素依次执行。forEach 是一个最终操作，所以我们不能在 forEach 之后来执行其他 Stream 操作。
+
+代码如下:
+```  
+stringCollection
+    .stream()
+    .filter((s) -> s.startsWith("a"))
+    .forEach(System.out::println);
+// "aaa2", "aaa1"
+```
+
+#### Sort 排序
+排序是一个中间操作，返回的是排序好后的 Stream。如果你不指定一个自定义的 Comparator 则会使用默认排序。
+
+代码如下:
+``` 
+stringCollection
+    .stream()
+    .sorted()
+    .filter((s) -> s.startsWith("a"))
+    .forEach(System.out::println);
+ 
+
+// "aaa1", "aaa2"
+```
+需要注意的是，排序只创建了一个排列好后的 Stream，而不会影响原有的数据源，排序之后原数据 stringCollection 是不会被修改的：
+
+代码如下:
+```  
+System.out.println(stringCollection);
+// ddd2, aaa2, bbb1, aaa1, bbb3, ccc, bbb2, ddd1
+```
+其实这也是函数式编程的一个好处：不会改变对象状态，每次都会创建一个新对象。
+
+#### Map 映射
+中间操作 map 会将元素根据指定的 Function 接口来依次将元素转成另外的对象，你也可以通过 map 来将对象转换成其他类型，
+map 返回的 Stream 类型是根据 map 传递进去的函数的返回值决定的。下面的示例展示了将字符串转换为大写字符串：
+
+代码如下:
+```  
+stringCollection
+    .stream()
+    .map(String::toUpperCase)
+    .sorted((a, b) -> b.compareTo(a))
+    .forEach(System.out::println);
+ 
+
+// "DDD2", "DDD1", "CCC", "BBB3", "BBB2", "AAA2", "AAA1"
+```
+
+#### Match 匹配 
+Stream 提供了多种匹配操作，允许检测指定的 Predicate 是否匹配整个 Stream。所有的匹配操作都是最终操作，并返回一个 boolean 类型的值。
+
+代码如下:
+``` 
+boolean anyStartsWithA = 
+    stringCollection
+        .stream()
+        .anyMatch((s) -> s.startsWith("a"));
+ 
+
+System.out.println(anyStartsWithA);      // true
+
+boolean allStartsWithA = 
+    stringCollection
+        .stream()
+        .allMatch((s) -> s.startsWith("a"));
+
+System.out.println(allStartsWithA);      // false
+
+boolean noneStartsWithZ = 
+    stringCollection
+        .stream()
+        .noneMatch((s) -> s.startsWith("z"));
+
+System.out.println(noneStartsWithZ);      // true
+```
+
+#### Count 计数 
+计数是一个最终操作，返回 Stream 中元素的个数，返回值类型是 long。
+
+代码如下:
+```  
+long startsWithB = 
+    stringCollection
+        .stream()
+        .filter((s) -> s.startsWith("b"))
+        .count();
+ 
+
+System.out.println(startsWithB);    // 3
+```
+
+...
