--- a/_posts/java/2017-09-07-Java8.md
+++ b/_posts/java/2017-09-07-Java8.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Java8
+title: Java 8
 category : [Java]
 tagline: "Supporting tagline"
-tags : [Java, java8]
+tags : [Java]
 ---
 {% include JB/setup %}
-# Java8
+# Java 8
 ---
 
 <!--break-->
