--- a/_posts/java/2017-08-16-Java日期对象转换.md
+++ b/_posts/java/2017-08-16-Java日期对象转换.md
@@ -60,6 +60,7 @@ LocalDateTime zonedDateTimeLocalDateTime = zonedDateTime.toLocalDateTime();
 
 // 日期字符串转 LocalDateTime
 LocalDateTime localDateTime = LocalDate.parse(dateStr).atStartOfDay(ZoneId.systemDefault());
+LocalDateTime localDateTime = LocalDateTime.parse(dateTimeStr, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
 ```
 
 
@@ -155,4 +156,4 @@ Calendar zonedDateTimeInstantCalendar = GregorianCalendar.from(zonedDateTime);
 2017-08-16 11:08:49.729  WARN 28128 --- [  XNIO-2 task-1] .m.m.a.ExceptionHandlerExceptionResolver : Resolved exception caused by Handler execution: org.springframework.web.method.annotation.MethodArgumentTypeMismatchException: Failed to convert value of type 'java.lang.String' to required type 'java.time.ZonedDateTime'; nested exception is org.springframework.core.convert.ConversionFailedException: Failed to convert from type [java.lang.String] to type [@org.springframework.web.bind.annotation.RequestParam @org.springframework.format.annotation.DateTimeFormat java.time.ZonedDateTime] for value '02/17/2011'; nested exception is java.lang.IllegalArgumentException: Parse attempt failed for value [02/17/2011].
 ```
 
-接收的数据只有 date, 目标类型是 date 和 time.    
+接收的数据只有 date，目标类型是 date 和 time。  
