--- a/_posts/2017-03-05-RabbitMQ的学习和使用.md
+++ b/_posts/2017-03-05-RabbitMQ的学习和使用.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: RabbitMQ 的学习和使用
-category : [JavaEE]
+category : [RabbitMQ]
 tagline: "Supporting tagline"
 tags : [RabbitMQ]
 ---
