--- a/_posts/2017-03-06-Kafka的学习和使用.md
+++ b/_posts/2017-03-06-Kafka的学习和使用.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Kafka 的学习和使用
-category : [JavaEE, 大数据开发]
+category : [Kafka]
 tagline: "Supporting tagline"
 tags : [Kafka]
 ---
