--- a/_posts/spring/2017-01-10-Spring.md
+++ b/_posts/spring/2017-01-10-Spring.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Spring 的学习和使用
-category : [JavaEE, Spring]
+category : [Spring]
 tagline: "Supporting tagline"
 tags : [Spring]
 ---
