--- a/_posts/2017-01-20-Gradle依赖配置.md
+++ b/_posts/2017-01-20-Gradle依赖配置.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Gradle 的学习和使用
-category : [JavaEE]
+category : [Java]
 tagline: "Supporting tagline"
 tags : [Gradle]
 ---
