--- a/_posts/2017-04-28-JHipster的学习和使用.md
+++ b/_posts/2017-04-28-JHipster的学习和使用.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: JHipster 的学习和使用
-category : [JavaEE]
+category : [Java]
 tagline: "Supporting tagline"
 tags : [JHipster]
 ---
