--- a/_posts/java/2017-09-07-Java8.md
+++ b/_posts/java/2017-09-07-Java8.md
@@ -17,10 +17,12 @@ tags : [Java]
 > https://www.cnblogs.com/jianwei-dai/p/5819479.html 
 
 函数式接口，简单的说就是指仅含有一个抽象方法的接口，以 `@Functionalnterface` 标注，注意，这里的抽象方法指的是该接口自己特有的抽象方法，而不包含它从其上级继承过来的抽象方法。
-如 `java.lang.Comparable`，之前被称为 SAM 类型，即单抽象方法(Single Abstract Method)。我们并不需要声明一个接口是函数式接口，编译器会根据接口的结构自行判断，
-但是也可以用 `@FunctionalInterface` 来显式指定一个接口是函数式接口，加上这个注解之后，编译器就会验证该接口是否满足函数式接口的要求
+如 `java.lang.Comparable`，之前被称为 SAM 类型，即单抽象方法(Single Abstract Method)。我们并不需要声明一个接口是函数式接口，编译器会根据接口的结构自行判断，但是也可以用
+`@FunctionalInterface` 来显式指定一个接口是函数式接口，加上这个注解之后，编译器就会验证该接口是否满足函数式接口的要求
 
 > Java8 的接口还可以定义一个 default 的方法，default 方法使用 `default` 关键字修饰，它是对象方法，需要使用对象来进行访问。
+
+> [JAVA8接口中的default、static方法使用注意事项](https://blog.csdn.net/zixiao217/article/details/70197520)
 
 ### Java8 中常用的全新的接口 
 Java7 中已经存在的函数式接口： 
