--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Quartz 的学习和使用
-category : [Quartz]
+category : [学习记录]
 tagline: "Supporting tagline"
 tags : [Quartz]
 ---
