--- a/_posts/2018-07-05-Redis命令.md
+++ b/_posts/2018-07-05-Redis命令.md
@@ -1,4 +1,15 @@
-# Redis 命令
+---
+layout: post
+title: Redis 常用命令
+category : [学习记录]
+tagline: "Supporting tagline"
+tags : [Redis]
+---
+{% include JB/setup %}
+# Redis 常用命令 
+---
+
+## Redis 常用命令
 
 - redis-cli -h localhost -p 6379 [-a 密码] : 连接 Redis 服务器。
 
@@ -15,6 +26,8 @@
   ```
   del key
   ```
+  
+<!--break-->
 
 - 删除模糊匹配 key 的缓存
 
